overflow bugs

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,7 +3,7 @@
 body {
   color: var(--color-text);
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   background-image: linear-gradient(
     109.6deg,
     rgba(156, 252, 248, 1) 11.2%,
